--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "drop-stream": "^0.1.1",
-    "mumble-streams": "0.0.4",
+    "mumble-streams": "git+https://github.com/altpd13/mumble-streams",
     "promise": "^7.1.1",
     "reduplexer": "^1.1.0",
     "remove-value": "^1.0.0",
