--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "node_modules/.bin/babel -d lib/ src/",
-    "prepublish": "npm run compile",
+    "preinstall": "npm run compile",
     "mocha": "node_modules/.bin/mocha --compilers js:babel-core/register",
     "test": "npm run compile && npm run mocha"
   },
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "drop-stream": "^0.1.1",
-    "mumble-streams": "git+https://github.com/altpd13/mumble-streams",
+    "mumble-streams": "git+https://github.com/altpd13/mumble-streams.git",
     "promise": "^7.1.1",
     "reduplexer": "^1.1.0",
     "remove-value": "^1.0.0",
